# chickenglass

./: .gitignore  .orc.toml  .shou.toml  .size-limit.mjs  AGENTS.md  CLAUDE.md  DESIGN.md  FORMAT.md  README.md  Setup.hs  biome.json  build.sh  chickenglass.py  chickglass.py  chinkenglass.py  components.json  editor.test.ts  editor.ts  eslint.config.js  index.html  knip.config.ts  lefthook.yml  package-lock.json  package.json  perf-baseline.json  pnpm-lock.yaml  requirements.txt  tsconfig.app.json  tsconfig.editor.json  tsconfig.json  vite.config.ts  vite.editor.config.ts  vitest.config.ts
.claude/: settings.json  workflow.json
.codex/: config.toml
.playwright-cli/: page-2026-03-19T09-27-23-993Z.yml  page-2026-03-20T11-12-39-066Z.yml  page-2026-03-20T11-12-52-618Z.yml  page-2026-03-20T11-13-23-381Z.yml  page-2026-03-20T11-14-30-003Z.yml
demo/: coflat.yaml  index.md  reference.bib
docs/: authoring.md  (+8 more)
src-tauri/: Cargo.toml  tauri.coflat2.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  menu.rs
src-tauri/src/commands/: context.rs  debug.rs  error.rs  export.rs  fs.rs  git.rs  mod.rs  path.rs  perf.rs  recovery.rs  shell.rs  state.rs  watch.rs
src-tauri/src/commands/state/: perf.rs  project.rs  watch.rs  window.rs
src-tauri/src/services/: app_data_migration.rs  filesystem.rs  mod.rs  path.rs  path_filter.rs  project_visibility.rs  recovery.rs  watch.rs  watch_debouncer.rs  watch_filter.rs  window_generation.rs
src-tauri/src/services/watch/: debouncer.rs  mod.rs
(+1801 files in other folders)
